tooling/nargo_cli/tests/snapshots/execution_failure/dynamic_index_failure/execute__tests__acir_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Index out of bounds, array has size 5, but index was 14
  ┌─ src/main.nr:6:12
  │
6 │     assert(x[idx] != 0);
  │            ------
  │
  = Call stack:
    1. src/main.nr:6:12

Failed to solve program: 'Index out of bounds, array has size 5, but index was 14'
